# tauri-web-desktop-bp

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/: App.tsx  index.tsx  invoker.ts  window.d.ts
frontend/types/_gen/: Command.ts  GreetEvent.ts  GreetState.ts  LoginUserInfoState.ts
platform_core/: Cargo.toml
platform_core/src/: lib.rs
platform_core/src/core/: command.rs  credential.rs  logging.rs  mod.rs
platform_core/src/domain/: mod.rs  usecase.rs
platform_core/src/domain/auth/: adapter.rs  mod.rs  repository.rs  usecase.rs
platform_core/src/infrastructure/: infrastructure.rs  mod.rs
platform_core/src/infrastructure/auth/: auth0_service.rs  db_repository.rs  db_resource.rs  mod.rs
platform_core/src/infrastructure/user/: mod.rs
platform_core/src/presentation/: mod.rs  state.rs
platform_core/src/presentation/auth/: event.rs  state.rs
platform_core/src/presentation/user/: event.rs  state.rs
src/: App.tsx  index.tsx
src-server/: Cargo.toml
src-server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: core.rs
src-tauri/src/domain/: usecase.rs
src-tauri/src/presentation/: state.rs
src/_components/: SignUpForm.tsx
