[workspace]
resolver = "2"
members = [
    "platform_core",
    "src-tauri",
    "src-server"
]

[workspace.dependencies]
reqwest = {version = "^0.12.5", features = ["json"]}
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
chrono = "^0.4.40"
async-trait = "^0.1.88"
zeroize = "^1.7"
