[package]
name = "platform_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[build-dependencies]
ts-rs = "10.1.0"
tauri-build = { version = "^2", features = [] }

[dependencies]
ts-rs = "10.1.0"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
