[package]
name = "tauri-desktop-app"
version = "0.1.0"
description = "Tauri Desktop App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
ts-rs = "10.1.0"
tauri-build = { version = "^2", features = [] }

[dependencies]
platform_core = { path = "../platform_core" }
ts-rs = "10.1.0"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

